--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5",
-    "pdf-lib": "^1.17.1"
-  }
+  "express": "^4.18.2",
+  "multer": "^1.4.5-lts.1",
+  "pdf-lib": "^1.17.1"
 }
